Added complete sms authentication, authentication happens only once, added qr-code generation, minor fixes, ui improvements

--- a/Android Client/Clup/app/src/main/AndroidManifest.xml
+++ b/Android Client/Clup/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.android.clup">
 
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -10,16 +12,22 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Clup">
+        android:theme="@style/Theme.Clup"
+        tools:ignore="AllowBackup">
         <activity
-            android:name=".VerifyCodeActivity"
-            android:windowSoftInputMode="stateVisible" />
+            android:name=".ui.MainActivity"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity> <!-- TODO BEFORE_FINAL_BUILD change enabled="true" in AuthActivity and enabled="false" in MainActivity -->
         <activity
-            android:name=".PhoneInputActivity"
+            android:name=".ui.auth.AuthActivity"
+            android:enabled="false"
             android:windowSoftInputMode="stateVisible">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
