--- a/Android Client/Clup/app/src/main/AndroidManifest.xml
+++ b/Android Client/Clup/app/src/main/AndroidManifest.xml
@@ -12,11 +12,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Clup"
+        android:theme="@style/AppTheme.Clup"
         tools:ignore="AllowBackup">
         <activity
             android:name=".ui.MainActivity"
-            android:enabled="true">
+            android:enabled="true"
+            android:theme="@style/AppTheme.Clup.SplashScreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -25,6 +26,7 @@
         <activity
             android:name=".ui.auth.AuthActivity"
             android:enabled="false"
+            android:theme="@style/AppTheme.Clup.SplashScreenTheme"
             android:windowSoftInputMode="stateVisible">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
