--- a/Android Client/Clup/app/build.gradle
+++ b/Android Client/Clup/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'androidx.core:core:1.3.2'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
+    implementation 'androidx.viewpager2:viewpager2:1.1.0-alpha01'
 
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.libraries.maps:maps:3.1.0-beta'
@@ -53,7 +54,7 @@ dependencies {
     implementation 'com.github.kenglxn.QRGen:android:2.6.0'
 
     // for unit tests
-    testImplementation 'junit:junit:4.13.1'
+    testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.mockito:mockito-inline:2.27.0'
 
     // for instrumentation tests
