--- a/Android Client/Clup/app/build.gradle
+++ b/Android Client/Clup/app/build.gradle
@@ -32,9 +32,9 @@ android {
 }
 
 dependencies {
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.1'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 
-    implementation 'androidx.recyclerview:recyclerview:1.2.0-beta01'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0-beta02'
     implementation 'androidx.recyclerview:recyclerview-selection:1.1.0'
     implementation 'androidx.appcompat:appcompat:1.3.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0-alpha2'
@@ -52,6 +52,8 @@ dependencies {
     
     implementation 'com.github.razir.progressbutton:progressbutton:2.1.0'
     implementation 'com.github.kenglxn.QRGen:android:2.6.0'
+
+    implementation 'com.github.vipulasri:timelineview:1.1.5'
 
     // for unit tests
     testImplementation 'junit:junit:4.13.2'
