--- a/Android Client/Clup/build.gradle
+++ b/Android Client/Clup/build.gradle
@@ -2,11 +2,11 @@
 buildscript {
     repositories {
         google()
-        jcenter()
         mavenCentral()
+        jcenter() // fallback repository
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.2'
+        classpath 'com.android.tools.build:gradle:4.2.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,8 +16,8 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
         maven { url "https://jitpack.io" }
+        jcenter() // fallback repository
     }
 }
 
