--- a/Android Client/Clup/app/src/main/AndroidManifest.xml
+++ b/Android Client/Clup/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="${MAPS_API_KEY}" />
+            android:value="@string/google_maps_key" />
 
         <receiver
             android:name=".notification.NotificationBroadcastReceiver"
