--- a/Android Client/Clup/build.gradle
+++ b/Android Client/Clup/build.gradle
@@ -3,7 +3,6 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-        jcenter() // fallback repository
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.1'
@@ -17,7 +16,7 @@ allprojects {
     repositories {
         google()
         maven { url "https://jitpack.io" }
-        jcenter() // fallback repository
+        mavenCentral()
     }
 }
 
