--- a/Android Client/Clup/app/build.gradle
+++ b/Android Client/Clup/app/build.gradle
@@ -42,9 +42,9 @@ android {
 dependencies {
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 
-    implementation 'androidx.recyclerview:recyclerview:1.2.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.recyclerview:recyclerview-selection:1.1.0'
-    implementation 'androidx.appcompat:appcompat:1.4.0-alpha01'
+    implementation 'androidx.appcompat:appcompat:1.4.0-alpha02'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0-beta02'
     implementation 'androidx.core:core:1.5.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
@@ -55,6 +55,7 @@ dependencies {
     implementation 'com.google.android.libraries.maps:maps:3.1.0-beta'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
+    implementation 'com.android.volley:volley:1.2.0'
 
     implementation 'com.googlecode.libphonenumber:libphonenumber:8.12.16'
     
