--- a/Android Client/Clup/app/build.gradle
+++ b/Android Client/Clup/app/build.gradle
@@ -44,12 +44,12 @@ dependencies {
 
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.recyclerview:recyclerview-selection:1.1.0'
-    implementation 'androidx.appcompat:appcompat:1.4.0-alpha02'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0-beta02'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.core:core:1.5.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
-    implementation 'androidx.viewpager2:viewpager2:1.1.0-alpha01'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
 
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
     implementation 'com.google.android.libraries.maps:maps:3.1.0-beta'
@@ -57,7 +57,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
     implementation 'com.android.volley:volley:1.2.0'
 
-    implementation 'com.googlecode.libphonenumber:libphonenumber:8.12.16'
+    implementation 'com.googlecode.libphonenumber:libphonenumber:8.12.25'
     
     implementation 'com.github.razir.progressbutton:progressbutton:2.1.0'
     implementation 'com.github.kenglxn.QRGen:android:2.6.0'
@@ -66,7 +66,7 @@ dependencies {
 
     // for unit tests
     testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.mockito:mockito-inline:2.27.0'
+    testImplementation 'org.mockito:mockito-inline:3.11.1'
 
     // for instrumentation tests
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
